--- a/aboly.html
+++ b/aboly.html
@@ -869,7 +869,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">事</span>：动词，侍奉，服侍。<span class="lyexample"><span>【例】</span><span>成语&ldquo;事齐事楚&rdquo;。</span></span>
+<a id="shi4f"></a><span class="lyterm">事</span>：动词，侍奉，服侍。<span class="lyexample"><span>【例】</span><span>成语&ldquo;事齐事楚&rdquo;。</span></span>
 </p>
 </li>
 <li>
@@ -2701,12 +2701,12 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">仪封人</span>：仪地的边境官。<span class="lyterm">仪</span>：<a href="#kangshu">卫国</a>城邑，毗邻鲁国，在今河南省开封市兰考县，故而兰考素称&ldquo;孔子过<a href="#hua4">化</a>&rdquo;之地。<span class="lyterm">封</span>：疆域，疆界。<span class="lyexample"><span>【例】</span><span>《明史&middot;兵志二》：<span class="lyq">都指挥使与布、按并称三司，为封疆大吏。</span></span></span>
+<span class="lyterm">仪封人</span>：仪地的边境官。<span class="lyterm">仪</span>：<a href="#kangshu">卫国</a>城邑，毗邻鲁国，在今河南省开封市兰考县，后来兰考也称&ldquo;孔子过<a href="#hua4">化</a>&rdquo;之地。<span class="lyterm">封</span>：疆域，疆界。<span class="lyexample"><span>【例】</span><span>《明史&middot;兵志二》：<span class="lyq">都指挥使与布、按并称三司，为封疆大吏。</span></span></span>
 </p>
 </li>
 <li>
 <p>
-<span class="lyterm">见</span>：在<span class="lyterm">请见</span>、<span class="lyterm">得见</span>中，指拜见，谒见（孔子），visit。在<span class="lyterm">见之</span>中，指（向孔子）引见（仪封人），present。</p>
+<span class="lyterm">见</span>：在<span class="lyterm">请见</span>、<span class="lyterm">得见</span>中，指拜见，谒见（孔子），visit，meet。在<span class="lyterm">见之</span>中，指（向孔子）引见（仪封人），introduce，present。</p>
 </li>
 <li>
 <p>
@@ -2721,7 +2721,7 @@ img.characterimg {
 <p>
 <span class="lyterm">铎</span>（<span class="lypinyin">du&oacute;</span>）：大铜铃。<span class="lyterm">木铎</span>的铃舌是木制的，金铎的铃舌是铜制的。周朝向公众宣布政令之前，会沿途振响木铎以引人关注。<span class="lyseealso"><span>【参】</span><span>《日知录&middot;卷五&middot;木铎》：<span class="lyq">金铎所以令军中，木铎所以令国中，此<a href="#xianwang">先王</a>仁义之用也。</span></span></span>
 </p>
-<p>这里以木铎比喻孔子，认为他在当时灰暗失序的年代，必将肩负起传播正道于天下、振聋发聩的历史使命。后来&ldquo;天之木铎&rdquo;就专指孔子。近现代也将致力于传道授业、德高望重的教师学者誉为木铎。北京师范大学的校徽里就是一个木铎。<span class="lyseealso"><span>【参】</span><span>1915年，李大钊有感于当时<span class="lyq">政象阴霾，风俗卑下</span>，中学少年多有灰心失望而自杀者，在《厌世心与自觉心》中写道：<span class="lyq">国中分子，昏梦罔觉者去其泰半，其余丧心溃气者又泰半，聪颖优秀者，悉数且甚寥寥，国或不亡，命脉所系，即在于是。&hellip;&hellip;设无文人，应时而出，奋生花之笔，扬木铎之声，人心来复之<a href="#ji1b">几</a>久塞，忏悔之念，更何由发，将与禽兽为侣，暴掠强食以自灭也。</span>（<a id="wang3b"></a>罔：无。泰：大。设：倘若。来复：回归（于善）。）</span></span>
+<p>这里以木铎比喻孔子，认为他在当时灰暗失序的年代，必将肩负起传播正道于天下、振聋发聩的历史使命。后来&ldquo;天之木铎&rdquo;就专指孔子。近现代也将致力于传道授业、德高望重的教师学者誉为木铎。北京师范大学的校徽中央就是一个木铎。<span class="lyseealso"><span>【参】</span><span>1915年，就读日本早稻田大学政治本科的青年李大钊有感于当时国内<span class="lyq">政象阴霾，风俗卑下</span>，中学少年多有灰心失望而自杀者，在《厌世心与自觉心》中写道：<span class="lyq">国中分子，昏梦罔觉者去其泰半，其余丧心溃气者又泰半，聪颖优秀者，悉数且甚寥寥，国或不亡，命脉所系，即在于是。&hellip;&hellip;设无文人，应时而出，奋生花之笔，扬木铎之声，人心来复之<a href="#ji1b">几</a>久塞，忏悔之念，更何由发，将与禽兽为侣，暴掠强食以自灭也。</span>（<a id="wang3b"></a>罔：无。泰：大。设：倘若。来复：回归（于善）。）</span></span>
 </p>
 </li>
 </ul>
@@ -2751,11 +2751,11 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="wuyue"></a><span class="lyterm">《武》</span>：<a href="#wu">周武王</a>时期的乐舞，相传为<a href="#zhougong">周公</a>所作，主要用于祭祖，内容从武王伐<a href="#zhou">纣</a>取得天下，直到周、<a href="#shaogong">召</a>二公分陕而治。<span class="lyterm">未尽善</span>：指尽管伐纣顺应天意民心，毕竟还是<a href="#caiweige">以暴易暴</a>。</p>
+<a id="wuyue"></a><span class="lyterm">《武》</span>：<a href="#wu">周武王</a>时期的乐舞，相传为<a href="#zhougong">周公</a>所作，主要用于祭祖，内容为武王伐<a href="#zhou">纣</a>取得天下，直到周、<a href="#shaogong">召</a>二公分陕而治。<span class="lyterm">未尽善</span>：指尽管伐纣顺应天意民心，毕竟还是<a href="#caiweige">以暴易暴</a>，同根相煎。</p>
 </li>
 </ul>
 <p>
-<span class="lyseealso"><span>【参】</span><span><a href="#7.14" class="lyref">7.14</a> 。<a id="jizhaguanyue"></a>前544年（《左传&middot;襄公二十九年》），<a href="#taibo">吴国</a>贤<a href="#gongzi">公子</a>季札（即后来的吴王阖闾的小叔）借出访鲁国的机会，观赏了大量<a href="#zhougong">周乐</a>，并作出精辟点评，其中也包括《韶》和《武》：<span class="lyq">见舞《大武》者，曰：&ldquo;美哉！周之盛，其若此乎？&rdquo;&hellip;&hellip;见舞《韶箾》者，曰：&ldquo;德至矣哉！大矣！如天之无不帱也，如地之无不载也，虽甚盛德，其蔑以加于此矣。观止矣！若有他乐，吾不敢请已！&rdquo;</span>（《韶箾》（<span class="lypinyin">xiāo</span>）：即《箫韶》。帱（<span class="lypinyin">ch&oacute;u</span>）：覆盖。蔑：无。）当时孔子7岁。</span></span>
+<span class="lyseealso"><span>【参】</span><span><a href="#7.14" class="lyref">7.14</a> 。<a id="jizhaguanyue"></a>前544年（《左传&middot;襄公二十九年》，当时孔子8岁），<a href="#taibo">吴国</a>贤<a href="#gongzi">公子</a>季札（即后来的吴王阖闾的小叔）借出访鲁国的机会，观赏了大量<a href="#zhougong">周乐</a>，并作出精辟点评，其中也包括《韶》和《武》：<span class="lyq">见舞《大武》者，曰：&ldquo;美哉！周之盛，其若此乎？&rdquo;&hellip;&hellip;见舞《韶箾》者，曰：&ldquo;德至矣哉！大矣！如天之无不帱也，如地之无不载也，虽甚盛德，其蔑以加于此矣。观止矣！若有他乐，吾不敢请已！&rdquo;</span>（《韶箾》（<span class="lypinyin">xiāo</span>）：即《箫韶》。帱（<span class="lypinyin">ch&oacute;u</span>）：覆盖。蔑：无。）</span></span>
 </p>
 </div>
 </div>
@@ -2805,7 +2805,7 @@ img.characterimg {
 <p>
 <span class="lyterm">知</span>（<span class="lypinyin">zh&igrave;</span>）：通&ldquo;智&rdquo;，有智慧。</p>
 <p>
-<a id="qujiu"></a><span class="lyseealso"><span>【参】</span><span>如果跳出&ldquo;里&rdquo;的环境，择友、择业等等，也都是这个道理。《大戴礼记&middot;曾子疾病》：<span class="lyq">与君子游，苾乎如入兰芷之室，久而不闻，则与之化矣；与小人游，贷乎如入鲍鱼之次，久而不闻，则与之化矣。是故君子慎其所去就。</span>（苾（<span class="lypinyin">b&igrave;</span>）：芳香。鲍鱼：腌咸鱼。贷：清代王念孙认为是&ldquo;<img alt="" src="/img/zhi.png" class="characterimg">&rdquo;（<span class="lypinyin">zh&iacute;</span>）之误，败臭。次：指肆，市中店铺。）英文<a href="http://heptagrama.com/quotes-thoughts-62.htm" class="lyurl" target="_blank">谚语</a>的建议更直白：<span class="lyqe">Surround yourself with people who make you a better person.</span>甚至<a href="http://www.jimrohn.com/" class="lyurl" target="_blank">Jim John</a>武断地说：<span class="lyqe">You are the average of the five people you spend the most time with.</span> 反过来想更容易认同：一直stand out是很累的；环境与时间会磨平棱角。</span></span>
+<a id="qujiu"></a><span class="lyseealso"><span>【参】</span><span>如果跳出&ldquo;里&rdquo;的环境，择友、择业等等，也都是这个道理。《大戴礼记&middot;曾子疾病》：<span class="lyq">与君子游，苾乎如入兰芷之室，久而不闻，则与之化矣；与小人游，贷乎如入鲍鱼之次，久而不闻，则与之化矣。是故君子慎其所去就。</span>（苾（<span class="lypinyin">b&igrave;</span>）：芳香。鲍鱼：腌咸鱼。贷：清代王念孙认为是&ldquo;<img alt="" src="/img/zhi.png" class="characterimg">&rdquo;（<span class="lypinyin">zh&iacute;</span>）之误，败臭。次：指肆，市中店铺。）英文<a href="https://heptagrama.com/quotes-thoughts-62.htm" class="lyurl" target="_blank">谚语</a>的建议更直白：<span class="lyqe">Surround yourself with people who make you a better person.</span>甚至<a href="http://www.jimrohn.com/" class="lyurl" target="_blank">Jim John</a>武断地说：<span class="lyqe">You are the average of the five people you spend the most time with.</span> 反过来想可能更容易认同：一直stand out是很累的，环境与时间会磨平棱角。</span></span>
 </p>
 </li>
 </ul>
@@ -3016,7 +3016,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">议</span>：讨论，商量，这里偏重于交流求道的心得体会。<span class="lyseealso"><span>【参】</span><span><a href="#15.40" class="lyref">15.40</a> <span class="lyq">道不同，不相为谋。</span>1929年，史学家陈寅恪（1890&mdash;1969）在王国维纪念碑铭中写道：<span class="lyq">士之读书治学，盖将以脱心志于俗谛之<a href="#zhigu">桎梏</a>，真理因得以发扬。</span>（谛：道理。俗谛：即庸俗鄙陋之见。）大概所有走出校园、进入社会的人，都能切身感受&ldquo;俗谛&rdquo;的无所不在，更可见专心求道之可贵。</span></span>
+<span class="lyterm">议</span>：讨论，商量，这里偏重于交流求道的心得体会。<span class="lyseealso"><span>【参】</span><span><a href="#15.40" class="lyref">15.40</a> <span class="lyq">道不同，不相为谋。</span>1929年，史学家陈寅恪（1890&mdash;1969）在王国维纪念碑铭中写道：<span class="lyq">士之读书治学，盖将以脱心志于俗谛之<a href="#zhigu">桎梏</a>，真理因得以发扬。</span>（谛：道理。俗谛：即庸俗鄙陋之见。）大概所有走出校园、进入社会的人，都能切身感受&ldquo;俗谛&rdquo;的无所不在，可见专心求道的可贵。</span></span>
 </p>
 </li>
 </ul>
@@ -13663,7 +13663,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="yimina"></a><span class="lyterm">逸民</span>：又作&ldquo;佚民&rdquo;，避世隐居的人，也特指灭国后的遗老遗少。<span class="lyterm">逸</span>：本义为逃跑，引申为隐遁。<span class="lyexample"><span>【例】</span><span>北宋周敦颐《爱莲说》：<span class="lyq">予谓菊，花之隐逸者也。</span></span></span>
+<a id="yimina"></a><span class="lyterm">逸民</span>：又作&ldquo;佚民&rdquo;，避世隐居的人，也特指灭国后的遗老遗少。<span class="lyterm">逸</span>：本义为逃跑，引申为隐遁。<span class="lyexample"><span>【例】</span><span>北宋周敦颐《爱莲说》：<span class="lyq">予谓菊，花之隐逸者也。</span></span></span><span class="lyseealso"><span>【参】</span><span>《新元史&middot;隐逸传》认为，<span class="lyq">孔子称为逸民者七人</span>以后，<span class="lyq">列于隐逸者，其人有二：惓惓故国，不仕新朝，自附于夷、齐者也；穷居伏处，修天爵而不受人爵，合于蛊上九之义者也。</span>（惓惓（<span class="lypinyin">qu&aacute;n</span>）：念念不忘。天爵、人爵：《孟子&middot;告子上》：<span class="lyq">仁义忠信，乐善不倦，此天爵也；公卿大夫，此人爵也。</span>蛊（<span class="lypinyin">gǔ</span>）上九：《周易&middot;蛊》卦上九爻：<span class="lyq">不<a href="#shi4f">事</a>王侯，高尚<a href="#qi2">其</a>事。</span>）</span></span>
 </p>
 </li>
 <li>
