--- a/aboly.html
+++ b/aboly.html
@@ -903,7 +903,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="gu4"></a><span class="lyterm">固</span>：浅陋狭隘。<span class="lyexample"><span>【例】</span><span><a href="#7.36" class="lyref">7.36</a> <span class="lyq">奢则不孙，俭则固。</span></span></span>
+<a id="gu4"></a><span class="lyterm"><a href="#gu4a">固</a></span>：浅陋狭隘，冥顽不化。<span class="lyexample"><span>【例】</span><span><a href="#7.36" class="lyref">7.36</a> <span class="lyq">奢则不孙，俭则固。</span></span></span>
 </p>
 </li>
 <li>
@@ -6140,7 +6140,7 @@ img.characterimg {
 </li>
 </ul>
 <p>
-<a id="yitianxiaweijiren"></a><span class="lyseealso"><span>【参】</span><span>《孟子&middot;万章上》通过<a href="#yiyin">伊尹</a>从隐居到出仕，从自立到<a href="#6.30">立人</a>的转变，提出以天下<a href="#12.1">归仁</a>为己任，激励了一代又一代儒者：<span class="lyq">&ldquo;与我处畎亩之中，由是以乐尧舜之道，吾岂若使是君为尧舜之君哉？吾岂若使是民为尧舜之民哉？吾岂若于吾身亲见之哉？天之生此民也，使先知觉后知，使先觉觉后觉也。予，天民之先觉者也；予将以斯道觉斯民也，非予觉之而谁也？&rdquo;思天下之民，匹夫匹妇有不<a href="#pi1">被</a>尧舜之泽者，若己推而内之沟中，其自任以天下之重如此。</span>（畎（<span class="lypinyin">quǎn</span>）：田间的水沟。畎亩：指民间。）苏轼《乐全先生文集叙》：<span class="lyq">呜呼，士不以天下之重自任，久矣！言语非不工也，政事文学非不敏且博也。然至于临大事，鲜不忘其<a href="#buwangqichu">故</a>、失其<a href="#shou3">守</a>者，其<a href="#qixiao">器小</a>也。</span></span></span>
+<a id="yitianxiaweijiren"></a><span class="lyseealso"><span>【参】</span><span>《孟子&middot;万章上》通过<a href="#yiyin">伊尹</a>从隐居到出仕，从自立到<a href="#6.30">立人</a>的转变，提出以天下<a href="#12.1">归仁</a>为己任，激励了一代又一代儒者：<span class="lyq">&ldquo;与我处畎亩之中，由是以乐尧舜之道，吾岂若使是君为尧舜之君哉？吾岂若使是民为尧舜之民哉？吾岂若于吾身亲见之哉？天之生此民也，使先知觉后知，使先觉觉后觉也。予，天民之先觉者也；予将以斯道觉斯民也，非予觉之而谁也？&rdquo;思天下之民，匹夫匹妇有不被尧舜之泽者，若己推而内之沟中，其自任以天下之重如此。</span>（畎（<span class="lypinyin">quǎn</span>）：田间的水沟。畎亩：指民间。被：覆盖，惠及。）苏轼《乐全先生文集叙》：<span class="lyq">呜呼，士不以天下之重自任，久矣！言语非不工也，政事文学非不敏且博也。然至于临大事，鲜不忘其<a href="#buwangqichu">故</a>、失其<a href="#shou3">守</a>者，其<a href="#qixiao">器小</a>也。</span></span></span>
 </p>
 </div>
 </div>
@@ -6658,7 +6658,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">固</span>：顽固不化，拒绝变通。<span class="lyseealso"><span>【参】</span><span><a href="#4.10" class="lyref">4.10</a> </span></span>
+<span class="lyterm"><a href="#gu4">固</a></span>：顽固不化，拒绝变通。<span class="lyseealso"><span>【参】</span><span><a href="#4.10" class="lyref">4.10</a> </span></span>
 </p>
 </li>
 <li>
@@ -10340,7 +10340,7 @@ img.characterimg {
 <p>
 <span class="lyterm">奡</span>（<span class="lypinyin">&agrave;o</span>）：也写作浇（<span class="lypinyin">&agrave;o</span>），寒浞与后羿之妻（称玄妻，也是后羿打仗抢来的）所生的两个儿子之一，勇力过人，能在陆地上推船行走，曾在水战中荡覆敌舟。奡灭掉了斟灌氏、斟寻氏的国家，杀害了被后羿夺权的相。忠于夏的大臣靡在后羿被害后出逃，联合二氏的幸存者消灭了寒浞，复立相的遗腹子少康为夏朝之君。后来少康杀奡兄弟、灭有穷氏，夏朝得以中兴。亦见《左传&middot;襄公四年》、《史记正义》。</p>
 <p>
-<span class="lyseealso"><span>【参】</span><span>屈原（前352年&mdash;前281年）《离骚》也举他们为例来说明道德自律的重要：<span class="lyq">羿<a href="#yin2">淫</a>游以<a href="#yi4b">佚</a>畋兮，又好射夫封狐。固乱流其鲜终兮，浞又贪夫<a href="#jue2">厥</a>家。浇身被服强圉兮，纵欲而不忍。日康娱而自忘兮，厥首<a href="#yong4">用</a>夫颠陨。&hellip;&hellip;<a href="#tang">汤</a>禹<a href="#yan3">俨</a>而祗敬兮，周论道而莫差。举贤而授能兮，循绳墨而不颇。</span>（畋（<span class="lypinyin">ti&aacute;n</span>）：狩猎。<a id="feng1"></a>封：通&ldquo;丰&rdquo;，高大，肥厚。乱流：恣意妄为。<a href="#pi1">被</a>：指拥有。圉（<span class="lypinyin">y&ugrave;</span>）：通&ldquo;御&rdquo;，强圉即强力。颠陨：坠落。<a id="zhi1"></a>祗（<span class="lypinyin">zhī</span>）：敬。周：指周<a href="#wen">文</a>、<a href="#wu">武</a>等贤王。绳墨：喻准则。颇：偏。）</span></span>
+<span class="lyseealso"><span>【参】</span><span>屈原（前352年&mdash;前281年）《离骚》也举他们为例来说明道德自律的重要：<span class="lyq">羿<a href="#yin2">淫</a>游以<a href="#yi4b">佚</a>畋兮，又好射夫封狐。固乱流其鲜终兮，浞又贪夫<a href="#jue2">厥</a>家。浇身被服强圉兮，纵欲而不忍。日康娱而自忘兮，厥首<a href="#yong4">用</a>夫颠陨。&hellip;&hellip;<a href="#tang">汤</a>禹<a href="#yan3">俨</a>而祗敬兮，周论道而莫差。举贤而授能兮，循绳墨而不颇。</span>（畋（<span class="lypinyin">ti&aacute;n</span>）：狩猎。<a id="feng1"></a>封：通&ldquo;丰&rdquo;，高大，肥厚。乱流：恣意妄为。<a href="#pi1">被</a>服：拥有，负恃。圉（<span class="lypinyin">y&ugrave;</span>）：通&ldquo;御&rdquo;，强圉即强力。颠陨：坠落。<a id="zhi1"></a>祗（<span class="lypinyin">zhī</span>）：敬。周：指周<a href="#wen">文</a>、<a href="#wu">武</a>等贤王。绳墨：喻准则。颇：偏。）</span></span>
 </p>
 </li>
 <li>
@@ -10715,7 +10715,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="pi1"></a><span class="lyterm">被（<span class="lypinyin">pī</span>）发左衽（<span class="lypinyin">r&egrave;n</span>）</span>：披散头发、身着异族服装，指沦落成未开化的<a href="#yidihuaxia">野蛮人</a>。这里推崇的是管仲辅佐齐桓公&ldquo;尊王<a href="#rang3">攘</a>夷&rdquo;的业绩，包括救<a href="#shaogong">燕</a>于山戎、救<a href="#kangshu">卫</a>于狄等，事见《史记&middot;齐太公世家》。<span class="lyterm">被</span>：通&ldquo;披&rdquo;。<a id="zuoren"></a><span class="lyterm">衽</span>：上衣前胸处交领的部分。传统汉服以左前襟压右前襟，称为右衽，反之则为<span class="lyterm">左衽</span>，是当时周边少数民族的习俗，也是汉族寿衣的穿法。</p>
+<span class="lyterm">被（<span class="lypinyin">pī</span>）发左衽（<span class="lypinyin">r&egrave;n</span>）</span>：披散头发、身着异族服装，指沦落成未开化的<a href="#yidihuaxia">野蛮人</a>。这里推崇的是管仲辅佐齐桓公&ldquo;尊王<a href="#rang3">攘</a>夷&rdquo;的业绩，包括救<a href="#shaogong">燕</a>于山戎、救<a href="#kangshu">卫</a>于狄等，事见《史记&middot;齐太公世家》。<a id="pi1"></a><span class="lyterm">被</span>：通&ldquo;披&rdquo;。<a id="zuoren"></a><span class="lyterm">衽</span>：上衣前胸处交领的部分。传统汉服以左前襟压右前襟，称为右衽，反之则为<span class="lyterm">左衽</span>，是当时周边少数民族的习俗，也是汉族寿衣的穿法。</p>
 </li>
 <li>
 <p>
@@ -11422,7 +11422,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">固穷</span>：在艰苦困境中保持意志坚定（不违仁）。<span class="lyterm">固</span>：动词，安守，坚守。<a id="qiong2"></a><span class="lyterm">穷</span>：本义为已达尽头，尽，完，引申为困窘，贫乏，又引申为不得志。反义词是<a href="#da2">达</a>。<span class="lyexample"><span>【例】</span><span>成语&ldquo;穷途末路&rdquo;。<a id="qiongda"></a>《孟子&middot;尽心上》：<span class="lyq">穷则独善其身，达则兼善天下。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> <a href="#4.9" class="lyref">4.9</a> <a href="#6.7" class="lyref">6.7</a> 。《韩诗外传》第1卷第8章：<span class="lyq">厄穷而不悯，劳辱而不<a href="#gou3">苟</a>，然后有<a href="#zhi4b">致</a>也。</span>（<a id="e4b"></a>厄：困苦。<a id="min3b"></a>悯：忧伤。）</span></span>
+<span class="lyterm">固穷</span>：在艰苦困境中保持意志坚定（不违仁）。<span class="lyterm"><a href="#gu4a">固</a></span>：动词，安守，坚守。<a id="qiong2"></a><span class="lyterm">穷</span>：本义为已达尽头，尽，完，引申为困窘，贫乏，又引申为不得志。反义词是<a href="#da2">达</a>。<span class="lyexample"><span>【例】</span><span>成语&ldquo;穷途末路&rdquo;。<a id="qiongda"></a>《孟子&middot;尽心上》：<span class="lyq">穷则独善其身，达则兼善天下。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> <a href="#4.9" class="lyref">4.9</a> <a href="#6.7" class="lyref">6.7</a> 。《韩诗外传》第1卷第8章：<span class="lyq">厄穷而不悯，劳辱而不<a href="#gou3">苟</a>，然后有<a href="#zhi4b">致</a>也。</span>（<a id="e4b"></a>厄：困苦。<a id="min3b"></a>悯：忧伤。）</span></span>
 </p>
 </li>
 <li>
@@ -12300,6 +12300,11 @@ img.characterimg {
 <li>
 <p>
 <span class="lyterm">虎兕（<span class="lypinyin">s&igrave;</span>）出于柙（<span class="lypinyin">xi&aacute;</span>），龟玉毁于椟中</span>。<span class="lyterm">兕</span>：野牛。<span class="lyterm">柙</span>：兽笼。<span class="lyterm">龟玉</span>：龟甲和宝玉，古代视为国之重器。这里用&ldquo;虎兕&rdquo;隐指季氏的无名之师，&ldquo;龟玉&rdquo;指社稷之臣颛臾，批评两位学生未能尽到持危扶颠、进尽忠言的臣辅之职。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">言在柙而逸，在椟而毁，典守者不得辞其过。明二子居其位而不去，则季氏之恶，己不得不任其责也。</span>（<a id="dian3"></a>典：掌管，主持。）<a id="ligu"></a>《后汉书&middot;李固传》载，146年，年幼的汉冲帝被皇太后之兄、大将军梁冀毒死，太尉李固联合司徒胡广、司空赵戒，议立年长有德的清河王为帝。梁冀忌惮清河王之严明，执意立15岁的蠡吾侯（即汉桓帝），争论时<span class="lyq">意气凶凶而言辞激切，自胡广、赵戒以下，莫不慑惮之</span>，而李固坚守本议。一年后，李固被梁冀诬陷而死，临刑前写信给胡广、赵戒说：<span class="lyq">&ldquo;固受国厚恩，是以竭其股肱，不顾死亡，志欲扶持王室，比隆<a href="#hanwendi">文</a>、<a href="#hanxuandi">宣</a>。何图一朝梁氏迷谬，公等曲从，以吉为凶，成事为败乎？汉家衰微，从此始矣！公等受主厚禄，颠而不扶，倾覆大事，后之良史，岂有所私？固身已矣，于义得矣，夫复何言！&rdquo;广、戒得书悲惭，皆长叹流涕。</span>（<a id="gugong"></a>股<a href="#gong1b">肱</a>：大腿和胳膊，这里指辅佐（之力），也常比喻辅政重臣。）</span></span>
+</p>
+</li>
+<li>
+<p>
+<a id="gu4a"></a><span class="lyterm">固</span>：本义为四周地势险要闭塞，易于长守不变。<span class="lyexample"><span>【例】</span><span>贾谊《过秦论下》：<span class="lyq">秦地被山带河以为固，四塞之国也。</span></span></span>
 </p>
 </li>
 <li>
