--- a/aboly.html
+++ b/aboly.html
@@ -1255,8 +1255,8 @@ img.characterimg {
 <p>
 <a id="fazhi"></a>法家主张的<span class="lykeyword">法治</span>，以密法严刑为基础，不强求执政者德才无瑕，却足以建立坚实的底线。《管子&middot;任法》：<span class="lyq">所谓仁义<a href="#liyue">礼乐</a>者，皆出于法，此先圣之所以一民也。&hellip;&hellip;君臣上下贵贱皆发<a href="#yan1a">焉</a>，故曰&ldquo;法&rdquo;。&hellip;&hellip;君臣上下贵贱皆从法，此谓为大治。</span>（<a id="yimin"></a>一民：统治百姓。发：产生。）《商君书&middot;开塞》：<span class="lyq">古之民朴<a href="#yi3a">以</a>厚，今之民巧以伪。故效于古者，先德而治；效于今者，前刑而法。</span>《韩非子&middot;难势》：<span class="lyq">且夫<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#xiachao">桀</a>、<a href="#zhou">纣</a>，千世而一出，&hellip;&hellip;吾所以为言势者，中也。&hellip;&hellip;抱法处势则治，背法去势则乱。今废势背法而待尧舜，尧舜至乃治，是千世乱而一治也；抱法处势而待桀纣，桀纣至乃乱，是千世治而一乱也。</span>
 </p>
-<p>传统政治实践中，德治与法治相为补益。《汉书&middot;元帝本纪》载，汉元帝为太子时，<a id="hanxuandi"></a>曾向宣帝进言：<span class="lyq">&ldquo;陛下持刑太深，宜用儒生。&rdquo;宣帝作色曰：&ldquo;汉家自有法度，本以<a href="#wangdao">霸王道</a>杂之，奈何纯任德教，用周政乎！且俗儒不达时宜，好是古非今，使人眩于<a href="#zhengming">名实</a>，不知所守，何足委任？&rdquo;</span>652年编定的《唐律疏议》首卷倡言：<span class="lyq">德礼为政教之本，刑罚为政教之用，犹昏晓阳秋，相须而成者也。</span>（礼法之功效，在于自律他律。阳秋：即春秋，晋朝时为避文帝皇后讳，改春字为阳。）</p>
-<p>教化中则多偏重德礼修养，轻视普法宣传。《史记&middot;礼书》开头，<span class="lyq">太史公曰：<a href="#yangyang">洋洋</a>美德乎！宰制万物，役使群众，岂人力也哉？</span>（人力：指强力可为。）《大戴礼记&middot;礼察》：<span class="lyq">凡人之知，能见已然，不能见将然。礼者，禁于将然之前，而法者，禁于已然之后。是故法之用易见，而礼之所为生难知也。</span>（礼法之用，为事前事后。&ldquo;法禁于已然之后&rdquo;的观念，可能也造成中国百姓的法律意识淡薄，违法就自认倒霉。）<a href="#2.3" class="lyref">2.3</a>  比较了法治与德治的效果。</p>
+<p>传统政治实践中，德治与法治相为补益。《汉书&middot;元帝本纪》载，汉元帝为太子时，<a id="hanxuandi"></a>曾向宣帝进言：<span class="lyq">&ldquo;陛下持刑太深，宜用儒生。&rdquo;宣帝作色曰：&ldquo;汉家自有法度，本以<a href="#wangdao">霸王道</a>杂之，奈何纯任德教、用周政乎！且俗儒不达时宜，好是古非今，使人眩于<a href="#zhengming">名实</a>，不知所守，何足委任？&rdquo;</span>652年编定的《唐律疏议》首卷倡言：<span class="lyq">德礼为政教之本，刑罚为政教之用，犹昏晓阳秋，相须而成者也。</span>（礼法之功效，在于自律他律。阳秋：即春秋，晋朝时为避文帝皇后讳，改春字为阳。）</p>
+<p>教化中则多偏重德礼修养，轻视普法宣传。《史记&middot;礼书》开头，<span class="lyq">太史公曰：<a href="#yangyang">洋洋</a>美德乎！宰制万物，役使群众，岂人力也哉？</span>（人力：指强力可为。）《大戴礼记&middot;礼察》：<span class="lyq">凡人之知，能见已然，不能见将然。礼者，禁于将然之前，而法者，禁于已然之后。是故法之用易见，而礼之所为生难知也。</span>（礼法之用，为事前事后。&ldquo;法禁于已然之后&rdquo;的观念，可能也造成中国百姓日常法律意识淡薄，违法就自认倒霉。）<a href="#2.3" class="lyref">2.3</a>  比较了法治与德治的效果。</p>
 </div>
 </li>
 <li>
@@ -3833,7 +3833,8 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">之</span>指&ldquo;晏平仲&rdquo;或&ldquo;人&rdquo;都讲得通，可以自行理解，不必拘泥于一说。</p>
+<span class="lyterm">之</span>指&ldquo;晏平仲&rdquo;或&ldquo;人&rdquo;都讲得通。若干古本作&ldquo;久而人敬之&rdquo;。<span class="lyseealso"><span>【参】</span><span>《四书集注》引程颐语：<span class="lyq">人交久则敬衰。久而能敬，所以为善。</span>1866年，曾国藩在回复上海道台应宝时的信中说：<span class="lyq">令人敬畏，全在自立自强，不在装模作样。</span>原意&ldquo;人&rdquo;指外国<a href="#yuanren">远人</a>，但也不乏普遍意义。</span></span>
+</p>
 </li>
 </ul>
 </div>
@@ -4130,7 +4131,7 @@ img.characterimg {
 <a id="huairouyuanren"></a>
 <div class="lyseealso">
 <p>
-<span>【参】</span><span>中国古代素有&ldquo;怀柔<a href="#yidihuaxia">远人</a>&rdquo;的政治理念，怀即来，柔即安，均为使动用法。怀的这个含义，可理解为源自想念，即给予恩惠，使其感念向往；也可理解为源自胸怀，即宽厚仁爱，使之归于怀抱。</span>
+<span>【参】</span><span>中国古代素有&ldquo;怀柔<a href="#yuanren">远人</a>&rdquo;的政治理念，怀即来，柔即安，均为使动用法。怀的这个含义，可理解为源自想念，即给予恩惠，使其感念向往；也可理解为源自胸怀，即宽厚仁爱，使之归于怀抱。</span>
 </p>
 <p>这前一种解释，例证如<a href="#zichan">子产</a>去世时民众发自内心的悲痛，反例如《史记&middot;酷吏列传》所载，汉武帝的<a href="#tingwei">廷尉</a>张汤自幼娴于刀笔，<span class="lyq">为人多诈，舞智以御人，&hellip;&hellip;文深意忌不专平，&hellip;&hellip;舞文巧诋以辅法，&hellip;&hellip;百姓不安其生</span>，所以<span class="lyq">张汤死而民不思</span>（《史记&middot;平准书》）。</p>
 <p>后一种解释，在乔治&middot;奥威尔（George Orwell）的小说《动物庄园》（<em>Animal Farm</em>）第一章，谷仓集会里，有个生动的场景可以作为写照：</p>
@@ -5089,7 +5090,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">申申</span>和<span class="lyterm">夭夭</span>（<span class="lypinyin">yāo</span>）都形容舒展和缓的样子。<span class="lyterm">申</span>的甲骨文像闪电舒张，<span class="lyterm">夭</span>的甲骨文像人挥袖起舞。这种象形造字的美感，是字母化表音文字难以传达的。</p>
+<span class="lyterm">申申</span>和<span class="lyterm">夭夭</span>（<span class="lypinyin">yāo</span>），都是形容舒展和缓的样子。<span class="lyterm">申</span>的甲骨文像闪电舒张，<span class="lyterm">夭</span>的甲骨文像人挥袖起舞。这种象形造字的美感，是字母化表音文字难以传达的。</p>
 </li>
 </ul>
 </div>
@@ -6680,7 +6681,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">畏</span>：犯法入狱死，这里指拘禁不得出。亦见于 <a href="#11.23" class="lyref">11.23</a> 。<span class="lyterm">匡</span>：卫国地名，在今河南省长垣县西南，与<a href="#puyi">蒲邑</a>相邻。</p>
+<span class="lyterm">畏</span>：犯法入狱而死，这里指受困无法离开。亦见于 <a href="#11.23" class="lyref">11.23</a> 。<span class="lyterm">匡</span>：卫国地名，在今河南省长垣县西南，与<a href="#puyi">蒲邑</a>相邻。</p>
 </li>
 <li>
 <p>
@@ -8731,7 +8732,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="juchen"></a><span class="lyterm">具臣</span>：充任其职而碌碌无为之臣。<span class="lyterm">具</span>：出现在那里而已、徒具形式的意思。<a id="juwen"></a><span class="lyexample"><span>【例】</span><span>&ldquo;具文&rdquo;指空文，只有样子而不起实际作用的规章制度，现代汉语中也很常用。<a id="beiyuan"></a>&ldquo;备员&rdquo;与&ldquo;具臣&rdquo;的构词和含义都相近（员：官员，人员），又可指职位。《三国志&middot;蜀书&middot;董允传》：<span class="lyq">攸之性素和顺，备员而已。</span>（攸之：郭攸之，蜀国侍中。）《后汉书&middot;仲长统传》：<span class="lyq">自此以来，三公之职，备员而已。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#14.22" class="lyref">14.22</a> 。唐代赵蕤（<span class="lypinyin">ru&iacute;</span>）《长短经&middot;臣行》描述的六正六邪之臣，也包括大臣和具臣：<span class="lyq">虚心尽意，日进善道，勉主以礼义，谕主以长策，将顺其美，匡救其恶，如此者，大臣也。&hellip;&hellip;安官贪禄，不务公事，与世沉浮，左右观望，如此者，具臣也。</span>（将（<span class="lypinyin">jiāng</span>）：扶助。）</span></span>
+<a id="juchen"></a><span class="lyterm">具臣</span>：充任其职而碌碌无为之臣。<span class="lyterm">具</span>：出现在那里而已、徒具形式的意思。<a id="juwen"></a><span class="lyexample"><span>【例】</span><span>&ldquo;具文&rdquo;指空文，只有样子而不起实际作用的规章制度，现代汉语中也很常用。<a id="beiyuan"></a>&ldquo;备员&rdquo;与&ldquo;具臣&rdquo;的构词和含义都相近（员：官员，人员），又可指职位。如《史记&middot;张丞相列传》说，汉武帝的几任丞相为官但求廉谨，<span class="lyq">备员而已，无所能发明功名有著于当世者。</span>（发明：建树，昭彰。）《后汉书&middot;仲长统传》载，东汉建立后，光武帝愠于公室失权，强臣窃命，决然以尚书架空丞相，总揽朝政，<span class="lyq">自此以来，三公之职，备员而已</span>。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#14.22" class="lyref">14.22</a> 。唐代赵蕤（<span class="lypinyin">ru&iacute;</span>）《长短经&middot;臣行》描述的六正六邪之臣，也包括大臣和具臣：<span class="lyq">虚心尽意，日进善道，勉主以礼义，谕主以长策，将顺其美，匡救其恶，如此者，大臣也。&hellip;&hellip;安官贪禄，不务公事，与世沉浮，左右观望，如此者，具臣也。</span>（将（<span class="lypinyin">jiāng</span>）：扶助。）</span></span>
 </p>
 </li>
 <li>
@@ -9628,7 +9629,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">用情</span>：指待以真情，不虚饰掩藏。</p>
+<span class="lyterm">用情</span>：指坦诚相待，不虚饰掩藏。<a id="qing2"></a><span class="lyterm">情</span>：诚实，真情，与&ldquo;伪&rdquo;相对。&ldquo;情伪&rdquo;即真假，虚实。</p>
 </li>
 <li>
 <p>
@@ -10649,7 +10650,7 @@ img.characterimg {
 <p>孔子评价的晋文公之谲，解释不一。<a id="chengpuzhizhan"></a>一说是指前632年晋国为救援宋国，与楚国进行的城濮（<span class="lypinyin">p&uacute;</span>，在今山东省菏泽市鄄（<span class="lypinyin">ju&agrave;n</span>）城县）之战。当时晋文公先用手段使亲楚的曹、卫两国与楚断交，激怒楚军，然后退兵三舍（<span class="lypinyin">sh&egrave;</span>，1舍合30里），表示感念楚国的款待旧情。开战后，晋国下军将战马披上虎皮，抢先击破了楚方较弱的右翼&mdash;&mdash;陈、蔡联军；随即上军主动退却，弄得尘土漫天，伪装全军溃败的模样，诱使楚军深入追击；然后中军拦腰斩断，上军从侧面夹攻，击溃了楚军左翼。楚中军主力孤掌难鸣，大败而归，总帅<a href="#lingyin">令尹</a>子玉也引咎自尽。晋国巧计以弱胜强，一战而霸，可能孔子认为有失&ldquo;堂堂之阵、正正之师&rdquo;的风范。</p>
 <p>
 <a id="jiantuzhimeng"></a>另一种解释是，年老的晋文公渴望成就霸业，功利心太盛，操之过急。前631年冬，宋国求救于晋，晋人的反应是：<span class="lyq">报施救患，取威定霸，于是乎在矣。</span>次年夏4月击退楚军后，5月晋国就召集齐、宋、鲁、蔡、郑、卫等国，于践土（郑国之地，在今河南省新乡市原阳县）立盟，以晋为伯，共尊周室，同年冬再盟于温（周<a href="#wangji">王畿</a>内的小国，在今河南省焦作市温县），商议讨伐不顺服的国家。这两次盟会，天子周襄王都应邀（受召）前往，实质是为晋文公站台加冕，充当<a href="#3.13">媚于奥</a>的滑稽角色。这在《春秋》、《左传》&ldquo;僖公二十八年&rdquo;的记录也很委婉，因为<span class="lyq">以臣召君，不可以训</span>（孔子语。训：作为典范、楷模）。</p>
-<p>城濮之战前，<a href="#qihuangong">齐桓公</a>已死，中原各国群龙无首，饱受强大的楚国欺凌。晋文公长年漂泊，多识世故，<span class="lyq">险阻艰难，备尝之矣；民之<a href="#qing2">情</a>伪，尽知之矣</span>（楚成王语），这与齐桓公的尊崇无忧有天壤之别。他一朝为君，自知日暮途远，晋国固然人才济济，却无管仲那样独力擎天的经世奇才，其谲也是情非得已了。城濮之战后，30多年间楚国不敢北窥中原，晋国的强盛持续到<a href="#sanjiafenjin">六卿内斗</a>时期。</p>
+<p>城濮之战前，<a href="#qihuangong">齐桓公</a>已死，中原各国群龙无首，饱受强大的楚国欺凌。晋文公长年漂泊，多识世故，<span class="lyq">险阻艰难，备尝之矣；民之<a href="#qing2">情伪</a>，尽知之矣</span>（楚成王语），这与齐桓公的尊崇无忧有天壤之别。他一朝为君，自知日暮途远，晋国固然人才济济，却无管仲那样独力擎天的经世奇才，其谲也是情非得已了。城濮之战后，30多年间楚国不敢北窥中原，晋国的强盛持续到<a href="#sanjiafenjin">六卿内斗</a>时期。</p>
 </li>
 <li>
 <p> 孔子评价的齐桓公之<span class="lyterm">正</span>，应是指下一章的<a href="#jiuhezhuhou">九合诸侯，不以兵车</a>。</p>
@@ -12320,7 +12321,7 @@ img.characterimg {
 <p>
 <span class="lyterm">既<a href="#lai2">来</a>之，则安之</span>里的<span class="lyterm">来</span>和<span class="lyterm">安</span>，都是使动用法：使归从，使安定。</p>
 <p>
-<span class="lyterm">之</span>都是指<span class="lyterm">远人</span>，与自己关系疏远者。它既可指地理的远近，如海外异邦；也可指立场的亲疏，如敌国外患；又可指文化的同异，如<a href="#yidihuaxia">四夷</a>。如果孔子这里专有所指，也许是说鲁国连年讨伐的近邻<a href="#zhuguo">邾国</a>。</p>
+<a id="yuanren"></a>两个<span class="lyterm">之</span>都是指<span class="lyterm">远人</span>，与自己关系疏远者。它既可指地理的远近，如海外异邦；也可指立场的亲疏，如敌国外患；又可指文化的同异，如<a href="#yidihuaxia">四夷</a>。如果孔子这里专有所指，也许是说鲁国连年讨伐的近邻<a href="#zhuguo">邾国</a>。</p>
 <p>&ldquo;既来之，则安之&rdquo;作为现代成语，意思是既已来到这里，就安心待在这里。&ldquo;之&rdquo;的所指<a href="#shizhizhe">虚化</a>，常用于陌生的环境或岗位。</p>
 </li>
 <li>
@@ -13194,7 +13195,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">小子何述焉？</span>：我们当弟子的怎么记述传承呢？孔子为什么突然不想说话，难以确解，也留下了很多想象空间。子贡在 <a href="#5.13" class="lyref">5.13</a> ，追思了孔子不言的内容。颜回在 <a href="#9.11" class="lyref">9.11</a> ，描述了孔子善言的风采。<a href="#15.5" class="lyref">15.5</a>  的&ldquo;无为而治&rdquo;，也许是孔子向往的吧。</p>
+<span class="lyterm">小子何述焉？</span>：我们当弟子的怎么记述传承呢？孔子为什么突然不想说话，难以确解，也留下了很多想象空间。子贡在 <a href="#5.13" class="lyref">5.13</a> ，追思了孔子不言的内容。颜回在 <a href="#9.11" class="lyref">9.11</a> ，描述了孔子善言的风采。与 <a href="#15.5" class="lyref">15.5</a>  的&ldquo;无为而治&rdquo;、<a href="#12.13" class="lyref">12.13</a>  的&ldquo;无讼而律&rdquo;相似，&ldquo;不言而教&rdquo;也是孔子向往的吧。</p>
 </li>
 </ul>
 </div>
@@ -14205,7 +14206,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">得其情</span>：指查知案情真相，可以判罪了。<a id="qing2"></a><span class="lyterm">情</span>：实际情况，真情实感。<span class="lyexample"><span>【例】</span><span>《史记&middot;高祖本纪》：<span class="lyq">列侯诸将无敢隐朕，皆言其情：吾所以有天下者何？项氏之所以失天下者何？</span></span></span>
+<span class="lyterm">得其情</span>：指查知案情真相，可以判罪了。<span class="lyterm"><a href="#qing2">情</a></span>：真实情况，真情实感。<span class="lyexample"><span>【例】</span><span>《史记&middot;高祖本纪》：<span class="lyq">列侯诸将无敢隐朕，皆言其情：吾所以有天下者何？项氏之所以失天下者何？</span></span></span>
 </p>
 </li>
 </ul>
