--- a/aboly.html
+++ b/aboly.html
@@ -4895,7 +4895,7 @@ img.characterimg {
 <a id="zijiannanzi"></a>
 <div class="lyseealso">
 <p>
-<span>【参】</span><span>根据孔子周游列国的行程推算，子见南子约在前496年。其经过《左传》未载，仅见于《史记&middot;孔子世家》：<span class="lyq">反乎卫，主<a href="#quboyu">蘧伯玉</a>家。灵公夫人有南子者，使人谓孔子曰：&ldquo;四方之君子不辱欲与寡君为兄弟者，必见<a href="#16.14">寡小君</a>。寡小君愿见。&rdquo;孔子辞谢，不得已而见之。夫人在<a href="#chi1">絺</a><a href="#wei2a">帷</a>中，孔子入门，<a href="#nanmian">北面</a><a href="#baili">稽首</a>。夫人自帷中<a href="#zaibai">再拜</a>，环佩玉声璆然。孔子曰：&ldquo;吾<a href="#xiang4a">乡</a>为弗见，见之，礼答焉。&rdquo;子路不说。孔子<a href="#shi3a">矢</a>之曰：&ldquo;予所否者，天厌之！天厌之！&rdquo;居卫月余，灵公与夫人同车，宦者雍渠参乘，出，使孔子为次乘，招摇市过之。孔子曰：&ldquo;吾未见好德如好色者也。&rdquo;于是丑之，去卫，过曹。</span>（主：住。璆（<span class="lypinyin">qi&uacute;</span>）：玉饰相互撞动的叮咚声。<a id="cansheng"></a>同乘一车者，尊长居左，<a href="#yu4b">御</a>者居中，参<a href="#sheng4a">乘</a>就是车右陪乘人员。）</span>
+<span>【参】</span><span>根据孔子周游列国的行程推算，子见南子约在前496年。《左传》未载此事，现仅见于《史记&middot;孔子世家》：<span class="lyq">反乎卫，主<a href="#quboyu">蘧伯玉</a>家。灵公夫人有南子者，使人谓孔子曰：&ldquo;四方之君子不辱欲与寡君为兄弟者，必见<a href="#16.14">寡小君</a>。寡小君愿见。&rdquo;孔子辞谢，不得已而见之。夫人在<a href="#chi1">絺</a><a href="#wei2a">帷</a>中，孔子入门，<a href="#nanmian">北面</a><a href="#baili">稽首</a>。夫人自帷中<a href="#zaibai">再拜</a>，环佩玉声璆然。孔子曰：&ldquo;吾<a href="#xiang4a">乡</a>为弗见，见之，礼答焉。&rdquo;子路不说。孔子<a href="#shi3a">矢</a>之曰：&ldquo;予所否者，天厌之！天厌之！&rdquo;居卫月余，灵公与夫人同车，宦者雍渠参乘，出，使孔子为次乘，招摇市过之。孔子曰：&ldquo;吾未见好德如好色者也。&rdquo;于是丑之，去卫，过曹。</span>（主：住。璆（<span class="lypinyin">qi&uacute;</span>）：玉饰相互撞动的叮咚声。<a id="cansheng"></a>同乘一车者，尊长居左，<a href="#yu4b">御</a>者居中，参<a href="#sheng4a">乘</a>就是车右陪乘人员。）</span>
 </p>
 <p>据《汉书&middot;王莽传》所载太皇太后诏书：<span class="lyq">孔子见南子，<a href="#zhougong">周公</a>居<a href="#she4a">摄</a>，盖<a href="#quan2">权</a>时也。</span>颜师古注：<span class="lyq">孔子欲说灵公以治道，故见南子也。</span>可以视为当时的主流观点。</p>
 </div>
@@ -7343,11 +7343,15 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">唐棣（<span class="lypinyin">d&igrave;</span>）之华</span>这4句诗，出处已不可考。意思是：唐棣的花朵啊，摇曳翻转，怎能不思念你呀，（可惜）离家太远。</p>
+<span class="lyterm">唐棣（<span class="lypinyin">d&igrave;</span>）之华</span> 4句诗的意思是：唐棣的花朵啊，摇曳翻转，怎能不思念你呀，（然而）离家太远。其出处已不可考，《论语注疏》、《四书集注》都说是《<a href="#shijing">诗经</a>》的逸诗，古注多认为是表达思慕贤人之情。</p>
 <p>
-<span class="lyterm">华</span>：通&ldquo;花&rdquo;。<a id="tangdi"></a><span class="lyterm">唐棣</span>：也写作棠棣，学名叫郁李，蔷薇科灌木，春季开桃红色花。因为《诗经&middot;小雅&middot;常棣》开头用花朵和花萼的映衬依托来比拟兄弟亲情，后来就以棠棣喻指手足兄弟。</p>
+<span class="lyterm">华</span>：通&ldquo;花&rdquo;。<a id="tangdi"></a><span class="lyterm">唐棣</span>：也写作棠棣，学名为郁李，蔷薇科灌木，春季开桃红色花。<span class="lyseealso"><span>【参】</span><span>《诗经&middot;小雅&middot;常棣》开头用花朵与花萼的依托映衬来比拟兄弟亲情：<span class="lyq">常棣之华，鄂不韡韡。凡今之人，莫如兄弟。</span>（不：通&ldquo;柎&rdquo;（<span class="lypinyin">fū</span>），花萼的足。韡（<span class="lypinyin">wěi</span>）：光彩鲜明。）后来就常以棠棣比喻手足兄弟。</span></span>
+</p>
 <p>
-<a id="er2"></a><span class="lyterm">而</span>：无意义的句末助词，也可以表示感叹。<span class="lyexample"><span>【例】</span><span><a href="#18.5" class="lyref">18.5</a> <span class="lyq">已而，已而，今之从政者殆而！</span></span></span>
+<a id="er2"></a><span class="lyterm">而</span>：无意义的句末助词，又可以表示感叹。<span class="lyexample"><span>【例】</span><span><a href="#18.5" class="lyref">18.5</a> <span class="lyq">已而，已而，今之从政者殆而！</span></span></span>
+</p>
+<p>
+<span class="lyterm">偏其反而</span>：喻指（本应欢聚却）相远离。<span class="lyseealso"><span>【参】</span><span>《诗经&middot;小雅&middot;角弓》讲兄弟亲情：<span class="lyq">骍骍角弓，翩其反矣。兄弟昏姻，无胥远矣。</span>（骍骍：形容弓已调得便利顺手。翩其反矣：指张弓放箭时角弓两端由近而远。昏姻：指亲戚。胥：相互。）由此看来，把本章的4句诗理解为思念兄弟，由实指上升到思贤、思仁，也说得通。</span></span>
 </p>
 <p>
 <span class="lyterm">是</span>：副词，用在单音节形容词谓语之前，强化了形容的效果，相当于如此，这样，so，this。<span class="lyexample"><span>【例】</span><span><a href="#20.1" class="lyref">20.1</a> <span class="lyq">周有大赉，善人是富。</span>《诗经&middot;小雅&middot;南山有台》：<span class="lyq">乐只君子，德音是茂。</span>（<a id="zhi1a"></a>只：语气词，相当于呀，呵。德音：善言。）</span></span>
@@ -7358,7 +7362,8 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">何远之有</span>是说，当真思念的话，就不会觉得路途遥远了。</p>
+<span class="lyterm">何远之有</span>是说，当真思念的话，就不会以路远为辞了。<span class="lyseealso"><span>【参】</span><span><a href="#6.12" class="lyref">6.12</a> </span></span>
+</p>
 </li>
 </ul>
 </div>
