--- a/aboly.html
+++ b/aboly.html
@@ -2926,7 +2926,7 @@ img.characterimg {
 <p>
 <span class="lyterm">造</span>：仓促。<span class="lyexample"><span>【例】</span><span>《礼记&middot;玉藻》：<span class="lyq">造受命于君前，则书于笏。</span>（笏（<span class="lypinyin">h&ugrave;</span>）：古代大臣朝见君王时所持的手板。）</span></span><span class="lyterm">次</span>：处，所在。<span class="lyterm">造次</span>就是忙乱之时，仓促之间，构词上类似于来自日文的围棋术语&ldquo;急所&rdquo;。后来又引申出片刻、轻率的意思。</p>
 <p>
-<span class="lyterm">颠</span>：倒，跌倒。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">危而不持，颠而不扶。</span>成语&ldquo;颠扑不破&rdquo;（扑：击打）。</span></span><span class="lyterm">沛</span>：通&ldquo;跋&rdquo;，也是跌倒。<span class="lyseealso"><span>【参】</span><span>颠沛一词出自《诗经&middot;大雅&middot;荡》结尾：<span class="lyq">人亦有言：颠沛之揭，枝叶未有害，本实先拨。<a href="#yinjian">殷鉴</a>不远，在<a href="#xiachao">夏后</a>之世。</span>（揭：翘起见根。拨：断绝。）是把根基动摇的商朝比作倾倒的大树。</span></span>
+<a id="dian1"></a><span class="lyterm">颠</span>：倒，跌倒。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">危而不持，颠而不扶。</span>成语&ldquo;颠扑不破&rdquo;（扑：击打）。</span></span><span class="lyterm">沛</span>：通&ldquo;跋&rdquo;，也是跌倒。<span class="lyseealso"><span>【参】</span><span>颠沛一词出自《诗经&middot;大雅&middot;荡》结尾：<span class="lyq">人亦有言：颠沛之揭，枝叶未有害，本实先拨。<a href="#yinjian">殷鉴</a>不远，在<a href="#xiachao">夏后</a>之世。</span>（揭：翘起见根。拨：断绝。）是把根基动摇的商朝比作倾倒的大树。</span></span>
 </p>
 </li>
 </ul>
@@ -7074,7 +7074,7 @@ img.characterimg {
 <p>Ilsa：好久不见，Sam。想来新桥底下的赛纳河水也不知流过去多少了。</p>
 <p>Sam：没错，小姐。真是逝水难寻哪。</p>
 </div>
-<p>古希腊哲学家赫拉克利特（Heraclitus）有名言：<span class="lyq">人不能踏进同一条河流两次。</span>（<span class="lyqe">No man ever steps in the same river twice.</span>）</p>
+<p>古希腊哲学家赫拉克利特（Heraclitus）有名言：<span class="lyq">你无法两次踏进同一条河流。</span>（<span class="lyqe">No man ever steps in the same river twice.</span>）</p>
 <p>感叹时机稍纵即逝的也有很多，如《汉书&middot;蒯通传》：<span class="lyq">夫功者，难成而易败；时者，难值而易失。时乎时，不再来。</span>（值：遇。）</p>
 </div>
 </div>
@@ -12269,7 +12269,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm"><a href="#xiang4">相</a></span>（<span class="lypinyin">xi&agrave;ng</span>）：特指扶助盲人。<span class="lyexample"><span>【例】</span><span>《荀子&middot;成相》：<span class="lyq">人主无贤，如<a href="#gu3a">瞽</a>无相，何伥伥！</span>（伥伥（<span class="lypinyin">chāng</span>）：无所适从的样子。）</span></span><span class="lyseealso"><span>【参】</span><span>明代薛瑄《读书录》：<span class="lyq">常人见贵人则知敬，见敌者则敬稍衰，于下人则<a href="#man4">慢</a>之而已。圣人与上下人己之间，皆一诚敬之心。</span>（敌：相当。）</span></span>
+<a id="xiang4b"></a><span class="lyterm"><a href="#xiang4">相</a></span>（<span class="lypinyin">xi&agrave;ng</span>）：特指扶助盲人。<span class="lyexample"><span>【例】</span><span>《荀子&middot;成相》：<span class="lyq">人主无贤，如<a href="#gu3a">瞽</a>无相，何伥伥！</span>（伥伥（<span class="lypinyin">chāng</span>）：无所适从的样子。）</span></span><span class="lyseealso"><span>【参】</span><span>明代薛瑄《读书录》：<span class="lyq">常人见贵人则知敬，见敌者则敬稍衰，于下人则<a href="#man4">慢</a>之而已。圣人与上下人己之间，皆一诚敬之心。</span>（敌：相当。）</span></span>
 </p>
 </li>
 </ul>
@@ -12318,6 +12318,11 @@ img.characterimg {
 <span class="lyterm">周任有言曰：&ldquo;陈力就列，不能者止。&rdquo;</span><span class="lyterm">周任</span>：古注说他是&ldquo;古之良史&rdquo;，但事迹不详。<span class="lyseealso"><span>【参】</span><span>《左传》有2处引用了周任的话。隐公六年：<span class="lyq">为国家者，见恶如农夫之务去草焉，芟夷蕰崇之，绝其本根，勿使能殖，则善者信矣。</span>（芟（<span class="lypinyin">shān</span>）：除草。<a id="yi2"></a>夷：平，铲除。蕰（<span class="lypinyin">y&ugrave;n</span>）：通&ldquo;蕴&rdquo;，积聚。）昭公五年：<span class="lyq">为政者不赏私劳，不罚私怨。</span></span></span>
 </p>
 <p>他这句话的意思是：拿得出什么本事就去任什么职，做不来就歇着吧。<a id="chen2a"></a><span class="lyterm">陈</span>：摆出，陈列。<span class="lyseealso"><span>【参】</span><span>《史记&middot;范雎蔡泽列传》引范雎上秦昭王书，开头说：<span class="lyq">臣闻明主立政，有功者不得不赏，有能者不得不官。劳大者其禄厚，功多者其爵尊，能治众者其官大。故无能者不敢当职焉，有能者亦不得蔽隐。</span></span></span>
+</p>
+</li>
+<li>
+<p>
+<span class="lyterm">危而不持，<a href="#dian1">颠</a>而不扶</span>。<span class="lyterm">持</span>：扶助，扶持。本句与后面的<span class="lyterm"><a href="#xiang4b">相</a></span>一语双关，责备他们身为臣下而不作为，使主上迷途难返，陷于无相之<a href="#gu3b">瞽</a>的危险境地。<span class="lyseealso"><span>【参】</span><span><a href="#11.24" class="lyref">11.24</a> 。《明史&middot;海瑞传》海瑞上嘉靖疏：<span class="lyq">今大臣持禄而好谀，小臣畏罪而结舌，臣不胜愤恨。</span></span></span>
 </p>
 </li>
 <li>
